[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "yieldfarm-backend"
version = "0.1.0"
description = "Backend service for the Yieldfarm DeFi pool yield and risk app."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.39,<3.0.0",
  "psycopg2-binary>=2.9.10,<3.0.0",
  "alembic>=1.16.4,<2.0.0",
  "apscheduler>=3.11.0,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.1,<2.0.0",
  "pytest>=8.4.1,<9.0.0",
  "pytest-cov>=6.2.1,<7.0.0",
  "ruff>=0.12.9,<1.0.0",
  "types-requests>=2.32.4.20250809,<3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

